[gd_scene load_steps=11 format=3 uid="uid://claj6wcferre1"]

[ext_resource type="Texture2D" uid="uid://danomhbmwpkec" path="res://art/enemies/cat/CatWalk-Sheet.png" id="1_6xk8f"]
[ext_resource type="Script" uid="uid://kd17gguu8nb1" path="res://scripts/enemies/enemy.gd" id="1_8e3ao"]
[ext_resource type="PackedScene" uid="uid://dp68grnhlgk6k" path="res://scenes/gameplay/damage_effect.tscn" id="2_fcftc"]
[ext_resource type="PackedScene" uid="uid://cu76y5gilhqw2" path="res://scenes/particle_effects/sparkle.tscn" id="3_38ino"]
[ext_resource type="AudioStream" uid="uid://b2u3qnqjt88s6" path="res://audio/enemies/CasperSingleMeow.wav" id="5_lu5c6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8e3ao"]
atlas = ExtResource("1_6xk8f")
region = Rect2(0, 0, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_38ino"]
atlas = ExtResource("1_6xk8f")
region = Rect2(256, 0, 256, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ifyv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e3ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38ino")
}],
"loop": true,
"name": &"Walk",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8e3ao"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nb6gf"]
streams_count = 1
stream_0/stream = ExtResource("5_lu5c6")

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_8e3ao")
walk_speed = 200.0

[node name="DamageEffect" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("2_fcftc")]
sprite = NodePath("../AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_4ifyv")
animation = &"Walk"
frame_progress = 0.741292

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(4.84353, 2.71421)
shape = SubResource("RectangleShape2D_8e3ao")

[node name="RagdollTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(39, 13)
target_position = Vector2(5, 46)

[node name="AttackRaycast" type="RayCast2D" parent="."]
position = Vector2(50, -3)
target_position = Vector2(11, 0)

[node name="Sparkle" parent="." instance=ExtResource("3_38ino")]
scale = Vector2(0.5, 0.5)
emitting = false
scale_amount_min = 0.2
scale_amount_max = 0.6

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_nb6gf")
volume_db = 1.1

[connection signal="timeout" from="RagdollTimer" to="." method="_on_ragdoll_timer_timeout"]
